<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.carsuper.coahr.widgets.myTittleBar.NormalTittleBar
        android:id="@+id/tb_tittle"
        app:tittle="修改昵称"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_grey_1000"/>
    <EditText
        android:textSize="@dimen/dp_14"
        android:id="@+id/et_name"
        style="@style/normal_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick_name"
        android:textCursorDrawable="@drawable/cursor"
        android:background="@drawable/bg_fff_background"
        android:padding="@dimen/edge_margin" />

    <TextView
        android:textSize="@dimen/dp_12"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="@dimen/edge_margin"
        android:text="@string/name_warning" />

    <TextView

        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/material_grey_500"
        android:gravity="center"
        android:clickable="false"
        android:text="@string/save"
        android:textColor="@color/material_white"
        android:textSize="18sp" />
</LinearLayout>