<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.carsuper.coahr.widgets.myTittleBar.NormalTittleBar
        android:id="@+id/tb_tittle"
        app:tittle="@string/return_change_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/dp_14"
        android:id="@+id/tv_return_change_message"
        android:text="@string/return_change_message"
        android:padding="@dimen/edge_margin"
        android:drawableLeft="@mipmap/tips"
        android:background="@drawable/bg_fff_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:padding="@dimen/edge_margin"
        android:id="@+id/rv_commodity_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:background="@drawable/bg_fff_background"-->
        <!--android:elevation="10dp">-->

        <!--<ImageView-->
            <!--android:id="@+id/iv_commodity_img"-->
            <!--android:src="@mipmap/a"-->
            <!--android:layout_marginLeft="@dimen/edge_margin"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="150dp"-->
            <!--android:scaleType="centerCrop" />-->


        <!--<TextView-->
            <!--android:id="@+id/tv_commodity_info"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_toRightOf="@+id/iv_commodity_img"-->
            <!--android:text="dfasdfasdfasdfasdfasdfasdfsdafsdafsdfsdfasdfasdfasdffsdfdf"-->
            <!--android:textColor="#ef4968"-->
            <!--android:textSize="9dp" />-->



        <!--<TextView-->
            <!--android:id="@+id/tv_commodity_price"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="fadsfasdfsadf"-->
            <!--android:layout_alignLeft="@+id/tv_commodity_info"-->
            <!--android:layout_alignBottom="@+id/iv_commodity_img"-->
            <!--android:layout_marginTop="12.5dp"-->
            <!--android:textColor="#2fc1ff"-->
            <!--android:textSize="13dp" />-->


        <!--<TextView-->
            <!--android:id="@+id/tv_commodity_count"-->
            <!--android:layout_toRightOf="@+id/tv_commodity_price"-->
            <!--android:layout_alignBaseline="@+id/tv_commodity_price"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</RelativeLayout>-->


    <TextView
        android:textSize="@dimen/dp_14"
        android:id="@+id/tv_number"
        android:text="@string/return_change_number"
        android:background="@drawable/bg_fff_background"
        android:paddingLeft="@dimen/edge_margin"
        android:paddingTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="@dimen/dp_14"
        android:id="@+id/tv_reason"
        android:text="@string/return_change_reason"
        android:background="@drawable/bg_fff_background"
        android:paddingLeft="@dimen/edge_margin"
        android:paddingTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="@dimen/dp_14"
        android:id="@+id/tv_money"
        android:text="@string/return_change_money"
        android:background="@drawable/bg_fff_background"
        android:paddingLeft="@dimen/edge_margin"
        android:paddingTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="@dimen/dp_14"
        android:id="@+id/tv_time"
        android:text="@string/return_change_time"
        android:background="@drawable/bg_fff_background"
        android:paddingLeft="@dimen/edge_margin"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_img_list"
       android:padding="@dimen/edge_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>
    <Button
        android:textSize="@dimen/dp_14"
        android:id="@+id/bt_cancle_submit"
        android:text="@string/cancel_submit"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/prominent_text_color"
        android:textColor="@color/material_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>